--- a/BestMotherFuckingWebsite.html
+++ b/BestMotherFuckingWebsite.html
@@ -3,31 +3,32 @@
 <head>
     <title>BestMotherFuckingWebsite</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
   <body>
   	<h1>This is the best motherfucking website.</h1>
   	<p>Really, it is.</p>
   	<h2>Seriously, you guys think that a fucking website doesn't need some styling?</h2>
-  	<p>You probably build websites using vim and feeling hardcore. You think your 4.99KB motherfuckingwebsite(.com) is going to get you some fucking award to put on your damn footer as a link. You think your fucking default font is gonna make your website run even on a toaster.</p>
-  	<p>WRONG, motherfucker.</p>
+  	<p>You probably build websites using vim and feeling hardcore. You think your 4.99KB <span class="red">motherfuckingwebsite</span>(.com) is going to get you some fucking award to put on your damn footer as a link. You think your fucking default font is gonna make your website run even on a toaster.</p>
+  	<p><span id="wrong">WRONG</span>, motherfucker.</p>
   	<h2>The best kick-ass website</h2>
-  	<p>Let me describe the real perfect-ass website which still has the glory of the past motherfuckingwebsites:</p>
+  	<p>Let me describe the real perfect-ass website which still has the glory of the past <span class="red">motherfuckingwebsites</span>:</p>
   	<ul>
   		<li>Shit doesn't weigh a ton (in fact it's just 34.97 KB when the 27.83KB cat picture below is removed)</li>
   		<li>The page weighs exactly 63.02kB, 93.7% less than the Google home page</li>
   		<li>Fits on your iPhone 1st gen (although it doesn't work on your damn 16x32 Tamagotchi)</li>
   		<li>Looks almost the same on every screen</li>
-  		<li>Every asshole that visits this website can use it without any problem well, kind of</li>
+  		<li>Every asshole that visits this website can use it without any problem <span class="petit">well, kind of</span></li>
   		<li>It's <a href="https://www.w3.org/TR/WCAG20/">accessible</a>, so everyone can enjoy it but not everyone can read this - this text is Ant-Accessible</li>
   		<li>Shit is even more legible than the fucking two previous versions - and it also has a cleanish style without looking like an <a href="https://en.wikipedia.org/wiki/ARPANET">ARPANET</a> website</li>
   		<li>Doesn't load massive images or scripts. We should all care about people who still use <a href="https://en.wikipedia.org/wiki/IP_over_Avian_Carriers">IPoAC</a></li>
   		<li>Uses only free and open resources. Like this ass-breaking font called "Open Sans" which btw weighs 15.21kB, wtf</li>
   		<li>It doesn't load your glorious jQuery or jQueryUI with all their fucking styles and shits. Nor Angular or any other framework. This website is made with plain HTML, CSS3 and JS. Keep it Vanilla!</li>
   		<li>Doesn't include any tracking service this website does, but hey, who cares</li>
-  		<li>Images aren't forbidden, but when SVG is available JUST USE IT.</li>
+  		<li>Images aren't forbidden, but when SVG is available <i>JUST USE IT</i>.</li>
   		<li>Use some fucking colors.</li>
-  		<li>Links don't really need to keep that shitty blue the browser is giving them: nor that violetish color when they are marked as visited. Just give them a <a href="https://www.colorhexa.com/0077aa">nice color</a></li>
+  		<li>Links don't really need to keep that <span class="block blue">shitty blue</span> the browser is giving them: nor that <span class="block violet">violetish color</span> when they are marked as visited. Just give them a <a href="https://www.colorhexa.com/0077aa">nice color</a></li>
   	</ul>
 
 <h2>Well guess what, motherfucker:</h2>
@@ -39,10 +40,10 @@
   	<li>It uses the TLD, too: bestmotherfucking.website, check out <a href="https://domainr.com/">domainr</a> to do something cool too.</li>
   	<li>It uses the kickassing <a href="https://letsencrypt.org/">Let's Encrypt</a> CA (don't you see the gorgeous green lock?)</li>
   	<li>It runs on <a href="https://www.nginx.com/welcome-to-nginx/">nginx</a>: the best fucking web server instead of Apache Server</li>
-  	<li>It uses <a href="https://thebestmotherfucking.website/js/jquery-2.2.4.min.js">a custom version</a>  of the awesome <a href="http://jquery.com/">ultra-lightweight jQuery</a> /s</li>
+  	<li>It uses <a href="https://thebestmotherfucking.website/js/jquery-2.2.4.min.js">a custom version</a>  of the awesome <a href="http://jquery.com/">ultra-lightweight jQuery</a> <b>/s</b></li>
   	<li>It doesn't use a single media query well, not really</li>
   	<li>It probably doesn't support all the web browsers, but that's the best thing - if the user's browser is outdated he will notice and maybe he will switch from <a href="https://support.microsoft.com/fr-fr/hub/4230784/internet-explorer-help">the crap he uses</a> to <a href="https://www.mozilla.org/fr/firefox/">a much cooler browser</a></li>
-  	<li>It uses some cool technologies like JavaScript JavaScript logo, CSS3 CSS3 logo and HTML5 HTML5 Logo</li>
+  	<li>It uses some cool technologies like JavaScript <img src="img/js.svg" title="JavaScript Logo" class="logo">, CSS3 <img src="img/css3.svg" title="CSS3 logo" class="logo"> and HTML5 <img src="img/html5.svg" title="HTML5 Logo" class="logo"></li>
   	<li>It supports <a href="https://en.wikipedia.org/wiki/HTTP/2">HTTP/2</a></li>
   	<li>It includes a Cache-Control header, so you don't waste your precious bandwidth if you visit the website more than once</li>
   	<li>It uses <a href="https://matomo.org/">Piwik</a>, a free and Open Source analytics platform (we still love you Google, don't be mad at us)
