--- a/BestMotherFuckingWebsite.html
+++ b/BestMotherFuckingWebsite.html
@@ -7,7 +7,7 @@
 </head>
 
   <body>
-  	<h1>This is the best motherfucking website.</h1>
+  	<h1>This is the <i>best</i> motherfucking website.</h1>
   	<p>Really, it is.</p>
   	<h2>Seriously, you guys think that a fucking website doesn't need some styling?</h2>
   	<p>You probably build websites using vim and feeling hardcore. You think your 4.99KB <span class="red">motherfuckingwebsite</span>(.com) is going to get you some fucking award to put on your damn footer as a link. You think your fucking default font is gonna make your website run even on a toaster.</p>
@@ -20,12 +20,12 @@
   		<li>Fits on your iPhone 1st gen (although it doesn't work on your damn 16x32 Tamagotchi)</li>
   		<li>Looks almost the same on every screen</li>
   		<li>Every asshole that visits this website can use it without any problem <span class="petit">well, kind of</span></li>
-  		<li>It's <a href="https://www.w3.org/TR/WCAG20/">accessible</a>, so everyone can enjoy it but not everyone can read this - this text is Ant-Accessible</li>
+  		<li>It's <a href="https://www.w3.org/TR/WCAG20/">accessible</a>, so everyone can enjoy it <span class="petit">but not everyone can read this - this text is Ant-Accessible</span></li>
   		<li>Shit is even more legible than the fucking two previous versions - and it also has a cleanish style without looking like an <a href="https://en.wikipedia.org/wiki/ARPANET">ARPANET</a> website</li>
   		<li>Doesn't load massive images or scripts. We should all care about people who still use <a href="https://en.wikipedia.org/wiki/IP_over_Avian_Carriers">IPoAC</a></li>
-  		<li>Uses only free and open resources. Like this ass-breaking font called "Open Sans" which btw weighs 15.21kB, wtf</li>
+  		<li>Uses only free and open resources. Like this ass-breaking font called "Open Sans" <span class="petit">which btw weighs 15.21kB, wtf</span></li>
   		<li>It doesn't load your glorious jQuery or jQueryUI with all their fucking styles and shits. Nor Angular or any other framework. This website is made with plain HTML, CSS3 and JS. Keep it Vanilla!</li>
-  		<li>Doesn't include any tracking service this website does, but hey, who cares</li>
+  		<li>Doesn't include any tracking service <span class="petit">this website does, but hey, who cares</span></li>
   		<li>Images aren't forbidden, but when SVG is available <i>JUST USE IT</i>.</li>
   		<li>Use some fucking colors.</li>
   		<li>Links don't really need to keep that <span class="block blue">shitty blue</span> the browser is giving them: nor that <span class="block violet">violetish color</span> when they are marked as visited. Just give them a <a href="https://www.colorhexa.com/0077aa">nice color</a></li>
@@ -50,37 +50,56 @@
   	<li>It allows universal access from every website via <a href="https://enable-cors.org/">CORS</a></li>
   	<li>It is <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Accessible</a> </li>
   	<li>It's Open Source, freely available on <a href="https://github.com/denysvitali/thebestmotherfuckingwebsite/">Git Hub</a>, and everybody can contribute to it.</li>
-  	<li>It uses the <a href="http://www.wtfpl.net/">WTFPL - Do What the Fuck You Want to Public License</a>, which is pretty clear on what you can and what you can't do:</li>
+  	<li>It uses the <a href="http://www.wtfpl.net/">WTFPL - Do What the Fuck You Want to Public License</a>, which is pretty clear on what you can and what you can't do:
+    <p id="fuck">0. You just DO WHAT THE FUCK YOU WANT TO.</p>
+    </li>
 
 </ul>
-    <p>0. You just DO WHAT THE FUCK YOU WANT TO.</p>
     <h2>Put even less contrast</h2>
-    <p>Yeah, a #444 is cool but a #454545 is better.</p>
-    <p>We don't need to break our eyes while looking at a motherfuckingwebsite.</p>
+    <p>Yeah, a <span class="nbr">#444</span> is cool but a <span class="nbr">#454545</span> is better.</p>
+    <p>We don't need to break our eyes while looking at a <span class="red">motherfuckingwebsite</span>.</p>
     <h2>Size matters, yeah, but don't exaggerate</h2>
     <p>Remember, not everybody is blind, and not everybody wants to read a fucking 2 inches letter on a 27 inches screen, so keep it cool. Don't exaggerate in size, but don't make an ant-compatible text either.</p>
     <h2>Put some pictures</h2>
-    <p>We're not looking at a novel by Stephanie Meyer, this is a motherfuckingwebsite so include some pictures to give a context.</p>
-    <p>The website shouldn't be overfilled with pictures, but it should make the user happy while reading your nonsense words.</p>
-    <p>ou see that fancy cat? He's happy, you should be too.</p>
+    <div id="taille">
+	    <div class="left">
+	    	<img src="img/cat.jpg" title="A nice and cute cat" id="cat">
+	    	<p id="caty">A cat, just to keep the context of the website.</p>
+	    </div>
+	    <div class="right">
+	    	<p>We're not looking at a novel by Stephanie Meyer, this is a <span class="red">motherfuckingwebsite</span> so include some pictures to give a context.</p>
+	    	<p>The website shouldn't be overfilled with pictures, but it should make the user happy while reading your nonsense words.</p>
+	    	<p>ou see that fancy cat? He's happy, you should be too.</p>
+	    </div>
+	</div>
+    
 
 <h2>Yes, even this is satire.</h2>
-<p>But this doesn't mean you should load your motherfuckingwebsite with shitty animations, instead keep it simple, minify its resources and use images responsibly. Remember the IPoAC users!</p>
-<blockquote><span>Good design is as little design as possible.</span><author>Some German motherfucker on motherfuckingwebsite.com</author></blockquote>
-<p>That's not entirely true, look at that motherfuckingwebsite. It's so minimal that it can be considered crap.</p>
+<p>But this doesn't mean you should load your <span class="red">motherfuckingwebsite</span> with shitty animations, instead keep it simple, minify its resources and use images responsibly. Remember the IPoAC users!</p>
+
+<blockquote>
+	<p>Good design is as little design as possible.</p>
+	<author id="auteur">Some German motherfucker on motherfuckingwebsite.com</author>
+</blockquote>
+
+<p>That's not entirely true, look at that <span class="red">motherfuckingwebsite</span>. It's so minimal that it can be considered crap.</p>
 <h2>Epilogue</h2>
-<p>Actually this website was made to follow the trend of the motherfuckingwebsite and the bettermotherfuckingwebsite.</p>
-<p>Despite what was said here they're beautiful and truly among the best websites on the internet (even though this is still thebestmotherfuckingwebsite), so go check 'em out.</p>
-<p>Seriously, follow some of the advice we gave you, they'll "make the web great again"</p>
+<p>Actually this website was made to follow the trend of the <span class="red">motherfuckingwebsite</span> and the <span class="red">bettermotherfuckingwebsite</span>.</p>
+<p>Despite what was said here they're beautiful and truly among the best websites on the internet (even though this is still <span class="red">thebestmotherfuckingwebsite</span>), so go check 'em out.</p>
+<p>Seriously, follow some of the advice we gave you, they'll "make the web great again" <span id="cit">Cit. needed</span></p>
 <h2>Author</h2>
 <p>This website was created by an annoyed developer that can  <a href="https://twitter.com/DenysVitali">be followed on Twitter</a>, <a href="https://github.com/denysvitali/">followed on GitHub</a> or contacted <a href="https://denv.it/">here, on his ultra-minimalist website</a></p>
 <h2>Resources</h2>
-<p>The cat picture was taken from the cool <a href="https://pixabay.com/">Pixabay</a> website: check it out, it's really cool and full of CC0 (aka Public Domain) content. The author is <a href="https://pixabay.com/users/1899441-1899441/">1899441</a> (seriously? His username looks like my PIN code!), the <a href="https://pixabay.com/photos/cat-pets-cat-s-eyes-mieze-dear-451377/">old picture</a> was by <a href="https://pixabay.com/users/aloiswohlfahrt-123449/">aloiswohlfahrt</a> , but I had to change it, cause it was too heavy and too cute. You can <a href="https://github.com/denysvitali/thebestmotherfuckingwebsite/issues/new">open an issue on GitHub</a> if you think that this decision goes against the rules of a good looking motherfuckingwebsite.</p>
+<p>The cat picture was taken from the cool <a href="https://pixabay.com/">Pixabay</a> website: check it out, it's really cool and full of CC0 (aka Public Domain) content. The author is <a href="https://pixabay.com/users/1899441-1899441/">1899441</a> (seriously? His username looks like my PIN code!), the <a href="https://pixabay.com/photos/cat-pets-cat-s-eyes-mieze-dear-451377/">old picture</a> was by <a href="https://pixabay.com/users/aloiswohlfahrt-123449/">aloiswohlfahrt</a> , but I had to change it, cause it was too heavy and too cute. You can <a href="https://github.com/denysvitali/thebestmotherfuckingwebsite/issues/new">open an issue on GitHub</a> if you think that this decision goes against the rules of a good looking <span class="red">motherfuckingwebsite</span>.</p>
 <h2>Legal</h2>
 <p>This website can be freely copied, modified, altered, distributed without any attribution whatsoever. However, if you feel like this website deserves an attribution, mention it. It won't hurt anybody :)</p>
 <p>Please, read the <a href="https://thebestmotherfucking.website/LICENSE.txt">license terms</a>.</p><br>
 <p>Don't worry, it can be read in less than 30 seconds, unless you have some sort of reading disability - in that case, I'm wondering why you're still reading this text. Really. Stop. Please. I mean, seriously. Why are you still reading?</p>
-Image
+
+<a href="http://www.kopimi.com/kopimi" title="Kopimi" id="kopi">
+	<img src="img/kopimi.svg" title="Kopimi Logo" id="kop">
+</a>
+
 <h2>Contributions</h2>
 <p>Since this website includes some contributions, and I'm not an asshole, I'll publically thank the following users for their help:</p>
 <ul>
